# food101-rust-deploy

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/image/: preprocess.rs
backend/src/model/: inference.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
model/onnx/: food101_mobilenetv3.onnx
scripts/: export_to_onnx.py  inspect_checkpoint.py  requirements.txt
