[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
ndarray = "0.15"
ort = "=2.0.0-rc.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"